--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <nav>
         <div>
           <a href="/"
-            ><p id="Вебстраница" lang="en"><span>Web </span>Studio</p></a
-          >
+            ><p id="Вебстраница" lang="en"><b><span>Web </span>Studio</b></p></a>
         </div>
 
         <ul>
@@ -434,8 +433,8 @@
 
     <footer>
       <div>
-        <p lang="en"><a href="#Вебстраница">
-          <span>Web </span>Studio</a><br/>
+        <p lang="en"><a href="#Вебстраница"><b>
+          <span>Web </span>Studio</b></a><br/>
           г. Киев, пр-т Леси Украинки, 26<br />
           info@example.com<br />
           +38 099 111 11 11
