--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <header>
       <nav>
         <div>
-          <a href="/"
-            ><p id="Вебстраница" lang="en"><b><span>Web </span>Studio</b></p></a>
+          <a href=""
+            ><p id="Вебстраница" lang="en">
+              <b><span>Web </span>Studio</b>
+            </p></a
+          >
         </div>
 
         <ul>
@@ -433,8 +436,10 @@
 
     <footer>
       <div>
-        <p lang="en"><a href="#Вебстраница"><b>
-          <span>Web </span>Studio</b></a><br/>
+        <p lang="en">
+          <a href="#Вебстраница"
+            ><b> <span>Web </span>Studio</b></a
+          ><br />
           г. Киев, пр-т Леси Украинки, 26<br />
           info@example.com<br />
           +38 099 111 11 11
