--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <div>
-          <a href=""
+          <a href="./"
             ><p id="Вебстраница" lang="en">
               <b><span>Web </span>Studio</b>
             </p></a
