--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
         <ul>
           <li>
-            <a href="">Студия</a>
+            <a href="" target="_blank">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="" target="_blank">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" target="_blank">Контакты</a>
           </li>
         </ul>
         <div>
