--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
         <ul>
           <li>
-            <a href="" target="_blank">Студия</a>
+            <a href="" target="_blank" rel="noreferrer noopener">Студия</a>
           </li>
           <li>
-            <a href="" target="_blank">Портфолио</a>
+            <a href="" target="_blank" rel="noreferrer noopener">Портфолио</a>
           </li>
           <li>
-            <a href="" target="_blank">Контакты</a>
+            <a href="" target="_blank" rel="noreferrer noopener">Контакты</a>
           </li>
         </ul>
         <div>
