--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     <header>
       <nav>
         <div>
-          <a href="./"
-            ><p id="Вебстраница" lang="en">
-              <b><span>Web </span>Studio</b>
-            </p></a
-          >
+          <a href="./"><span>Web </span>Studio</a>
         </div>
 
         <ul>
@@ -40,7 +36,7 @@
               width="16"
               height="11"
             />
-            <span lang="en">info@devstudio.com</span>
+            <span>info@devstudio.com</span>
           </a>
         </div>
         <div>
@@ -60,12 +56,11 @@
     <main>
       <section>
         <h1>эффективные решения для вашего бизнеса</h1>
-        <form>
-          <button name="Заказать услугу" formtarget="_blank">
-            Заказать услугу
-          </button>
-        </form>
+        <button name="Заказать услугу" formtarget="_blank">
+          Заказать услугу
+        </button>
       </section>
+
       <section>
         <h2></h2>
         <ul>
@@ -436,14 +431,13 @@
 
     <footer>
       <div>
-        <p lang="en">
-          <a href="#Вебстраница"
-            ><b> <span>Web </span>Studio</b></a
-          ><br />
-          г. Киев, пр-т Леси Украинки, 26<br />
-          info@example.com<br />
-          +38 099 111 11 11
-        </p>
+          <a href="./">
+            <span>Web </span>Studio</a>
+            <ul>
+              <li>г. Киев, пр-т Леси Украинки, 26</li>
+              <li>info@example.com</li>
+              <li>+38 099 111 11 11</li>
+            </ul>
       </div>
 
       <div>
